# adapter-newsapi/src/main/java/com/dwalczak/newsreader/newsapi/dto/NewsApiSourceShort.java
@@ -7,13 +7,7 @@ import lombok.experimental.Accessors;
 import javax.annotation.Nullable;
 
 @Data @Accessors(chain = true) @NoArgsConstructor
-public class NewsApiSource {
+public class NewsApiSourceShort {
     @Nullable private String id;
     @Nullable private String name;
-    @Nullable private String url;
-    @Nullable private String description;
-    @Nullable private String category;
-    @Nullable private String language;
-    @Nullable private String country;
-
 }
